--- a/AskAnyone/iOS/AskAnyone.iOS.csproj
+++ b/AskAnyone/iOS/AskAnyone.iOS.csproj
@@ -158,7 +158,7 @@
     </ImageAsset>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <BundleResource Include="Resources\hollowCircle.png" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -174,6 +174,9 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\icecream.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\exc.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
